--- a/javaEjercicio3S/index.html
+++ b/javaEjercicio3S/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
+<head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"
+     <title>Cajas de colores</title>
 </head>
 <body>
-<a href="unidad8.html">unidad8</a>.
+<a href="unidad8.html">unidad8</a>
 </body>
-
-
 </html>
